Small code clean-up